--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="js/1.数据类型.js"></script>
 </head>
 <body>
-    
+    <!-- 用于2.任意类型中 -->
+    <!-- <div id="box">
+        box
+    </div> -->
 </body>
 </html>
+
+<!-- 为什么这个要写在html的下面 -->
+<script src="js/3.函数.js"></script>
